// protoc -I vendor/github.com/open-telemetry/opentelemetry-proto -I pkg/tempopb/ pkg/tempopb/tempo.proto --go_out=plugins=grpc:pkg/tempopb

syntax="proto3";

package tempopb;

import "opentelemetry/proto/trace/v1/trace.proto";

service Pusher {
  rpc Push(PushRequest) returns (PushResponse) {};
}

service Querier {
  rpc FindTraceByID(TraceByIDRequest) returns (TraceByIDResponse) {};
}

message TraceByIDRequest {
  bytes traceID = 1;
  bytes blockStart = 2;
  bytes blockEnd = 3;
}

message TraceByIDResponse {
  Trace trace = 1;
}

message Trace {
  repeated opentelemetry.proto.trace.v1.ResourceSpans batches = 1;
}

message PushRequest {
  opentelemetry.proto.trace.v1.ResourceSpans batch = 1;
}

message PushResponse {
}